<resources>

    <string name="app_name">My App Portfolio</string>
    <string name="action_settings">Settings</string>
    <string name="header">My Nanodegree Apps!</string>

    <!-- button names-->
    <string name="spotify_streamer">SPOTIFY STREAMER</string>
    <string name="scores_app">SCORES APP</string>
    <string name="library_app">LIBRARY APP</string>
    <string name="build_it_bigger">BUILD IT BIGGER</string>
    <string name="xyz_reader">XYZ READER</string>
    <string name="capstone">CAPSTONE: MY OWN APP</string>

    <!-- toasts-->
    <string name="toast_spotify_streamer">This button will launch my Spotify Streamer project</string>
    <string name="toast_scores_app">This button will launch my Scores App project</string>
    <string name="toast_library_app">This button will launch my Library App project</string>
    <string name="toast_build_it_bigger">This button will launch my Build IT Bigger project</string>
    <string name="toast_xyz_reader">This button will launch my XYZ Reader project</string>
    <string name="toast_capstone">This button will launch my Capstone project</string>

</resources>
